<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smarter Wi-Fi Manager</string>
    <string name="prefs_name">Preferences</string>

    <string name="action_settings">Settings</string>
    <string name="action_add_timerange">Add time range</string>

    <string name="hello_world">Hello world!</string>
    <string name="prefs_item_shutdowntime">Wi-Fi Shutdown Time</string>
    <string name="prefs_item_shutdowntime_explanation">If you find Wi-Fi is disabled while adding a new network, or is otherwise toggled too often, you can increase the timeout before it is turned off.</string>
    <string name="prefs_item_notification">Show notification</string>
    <string name="prefs_item_notification_explanation">Turning off notifications may impact the background service in low memory conditions, if you notice problems, leave it on.</string>
    <string name="prefs_item_boot">Automatically start</string>
    <string name="prefs_item_boot_explanation">Automatically start Smarter Wi-Fi Manager service on boot or Wi-Fi and cell tower changes.</string>
    <string name="prefs_item_towermaintenance">Location Maintenance</string>
    <string name="prefs_item_towermaintenance_explanation">Keep the list of locations from growing too large by clever maintenance.</string>

    <string name="tab_main">Smarter</string>
    <string name="tab_ignore">Ignore</string>
    <string name="tab_learned">Learned</string>
    <string name="tab_bluetooth">Bluetooth</string>
    <string name="tab_time">Time</string>

    <string name="pref_enable">enable_system</string>
    <string name="pref_learn">enable_learning</string>

    <string name="service_desc">Smarter Wi-Fi Service</string>

    <string name="manage_radio_switch">Manage radios</string>
    <string name="manage_radio_explanation">Control Wi-Fi and Bluetooth based on auto-learned locations, time ranges, and other criteria</string>

    <string name="learn_wifi_switch">Auto-Learn Locations</string>

    <string name="manage_wifi_explanation">Control Wi-Fi radio based on auto-learned locations and other criteria</string>
    <string name="autolearn_wifi_description">Automatically learn when to enable Wi-Fi based on cell tower identities.  To begin learning in a new location, enable Wi-Fi normally.</string>
    <string name="ssid_blacklist_desc">While connected to an ignored SSID, automatic location learning will be disabled.  It will be re-enabled when you leave the blocked network.</string>
    <string name="learned_wifi_description">Cell tower identifiers are mapped to Wi-Fi network names in auto-learn mode.  If a network is turning on at inappropriate times, removing its entry will reset that networks state.</string>
    <string name="delete_dialog_title">Delete known network?</string>
    <string name="delete_learned_message">Deleting a learned network will reset all associations to known towers.  If auto-learning is enabled, the network will begin learning towers again.  To disable auto-learning for a network, set the network to "ignore" in the Ignore tab</string>
    <string name="bluetooth_blacklist_description">Wi-Fi and auto-learning will be disabled while connected to blacklisted Bluetooth devices.</string>
    <string name="ignoring_dialog_network">Ignoring network</string>
    <string name="ignoring_dialog_description">Ignoring a network will not automatically delete the learned locations.  You can delete them now or via the Learning tab, or you can leave them if you wish to continue enabling Wi-Fi based on known positions, but do not want to learn additional new locations.</string>
    <string name="ignoring_dialog_leave">Leave</string>
    <string name="ignoring_dialog_delete">Delete</string>
    <string name="shutdown_time_30s">30 seconds</string>
    <string name="shutdown_time_1m">One minute</string>
    <string name="shutdown_time_2m">Two minutes</string>
    <string name="time_range_desc">Fixed time ranges override other control methods and allow enabling or disabling radios within a time period.</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="nav_ignore">Ignored networks</string>
    <string name="nav_bluetooth">Bluetooth</string>
    <string name="nav_time">Time ranges</string>
    <string name="nav_learned">Learned networks</string>

    <string name="explanation_autolearned">Previously learned location</string>
    <string name="explanation_wifi_idle">Wi-Fi enabled but not connected</string>
    <string name="explanation_wifi_blocked">Wi-Fi blocked</string>
    <string name="explanation_wifi_enabled">Wi-Fi enabled</string>
    <string name="explanation_wifi_enabled_cell">In auto-learned location</string>
    <string name="explanation_wifi_disabled">Wi-Fi disabled</string>
    <string name="explanation_wifi_disabled_cell">Not near a known location</string>
    <string name="explanation_wifi_disabled_bluetooth">Connected to blacklisted Bluetooth device</string>
    <string name="explanation_wifi_management_disabled">Wi-Fi management disabled</string>
    <string name="explanation_wifi_management_disabled_user">Management turned off</string>
    <string name="explanation_wifi_management_disabled_cell">No cell towers in range</string>
    <string name="explanation_wifi_geofence_exclude">Disabled by geofence</string>
    <string name="explanation_wifi_geofence_include">Enabled by geofence</string>
    <string name="explanation_wifi_time_include">Enabled by time range</string>
    <string name="explanation_wifi_time_exclude">Disabled by time range</string>
    <string name="explanation_wifi_disabled_towerid">Connected to blacklisted cell tower</string>
    <string name="explanation_wifi_ignore_ssidblacklist">Connected to ignored SSID</string>
    <string name="explanation_wifi_forced_user_enabled">Wi-Fi forced on</string>
    <string name="explanation_wifi_forced_user_disabled">Wi-Fi forced off</string>
    <string name="explanation_wifi_ignore_airplane">In airplane mode</string>
    <string name="explanation_wifi_ignore_tethered">Tethering / sharing connection</string>
    <string name="explanation_wifi_ignore_sleeppolicy">Ignoring due to sleep policy</string>
    <string name="explanation_wifi_idle_disable">Wi-Fi idle in unknown location, waiting to disable</string>
    <string name="explanation_wifi_neverrun">Open Smarter Wi-Fi Manager to start controlling your Wi-Fi!</string>
    <string name="explanation_unknown">Unknown reason</string>

    <string name="wifistate_blocked">Wi-Fi forced off</string>
    <string name="wifistate_ignore">Not managing Wi-Fi</string>
    <string name="wifistate_on">Wi-Fi connected</string>
    <string name="wifistate_off">Wi-Fi disabled</string>
    <string name="wifistate_idle">Wi-Fi enabled but no network</string>

    <string name="title_activity_ssid_blacklist">Ignored Networks</string>
    <string name="title_activity_bluetooth_blacklist">Bluetooth</string>
    <string name="title_activity_timerange">Time Ranges</string>
    <string name="title_activity_learned">Learned Networks</string>

    <string name="timerange_delete_text">Delete Time Range</string>
    <string name="timerange_no_effect">Time range doesn\'t control anything</string>
    <string name="timerange_no_days">Time doesn\'t occur on any days</string>
    <string name="timerange_disabled_text">Time range disabled</string>
    <string name="timerange_control_wifi">Wi-Fi</string>
    <string name="timerange_control_bluetooth">Bluetooth</string>
    <string name="timerange_control_on">on</string>
    <string name="timerange_control_off">off</string>

    <string name="timerange_controlbutton_wifi">Manage Wi-Fi</string>
    <string name="timerange_controlbutton_bt">Manage Bluetooth</string>

    <string name="timerange_dialog_delete_title">Delete time range?</string>
    <string name="timerange_dialog_delete_cancel">Cancel</string>
    <string name="timerange_dialog_delete_ok">Delete</string>
    <string name="timerange_dialog_delete_text">Are you sure you would like to delete this time range?</string>

    <string name="range_mon">Mon</string>
    <string name="range_tue">Tue</string>
    <string name="range_wed">Wed</string>
    <string name="range_thu">Thu</string>
    <string name="range_fri">Fri</string>
    <string name="range_sat">Sat</string>
    <string name="range_sun">Sun</string>

    <string name="range_fail_nodays">No days selected</string>
    <string name="range_fail_notime">No time set</string>
    <string name="range_fail_nocontrol">No effect on Wi-Fi or Bluetooth</string>
    <string name="quicker_enable">Smarter Wi-Fi Manager</string>
    <string name="quicker_wifi">Wi-Fi</string>
    <string name="quicker_bt">Bluetooth</string>
    <string name="quicker_startswm">Smarter Wi-Fi Manager</string>
    <string name="quicker_settings">Android Wi-Fi Settings</string>
    <string name="quicker_close">Close</string>
    <string name="quicker_explanation">Smarter Wi-Fi Manager may disable or re-enable radios depending on the current configuration.</string>
    <string name="quicker_forget">Forget current location</string>

    <string name="nag_tower_maintenance">Smarter Wi-Fi Manager now has a method for automatically maintaining the list of locations for a Wi-Fi network.  Enable it by going to Preferences and turning on Location Maintenance!</string>
    <string name="nag_tower_maintenance_prefs">Go to prefs</string>
    <string name="nag_tower_maintenance_cancel">No thanks</string>

</resources>
