<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Smarter">

        <ListPreference
            android:defaultValue="30"
            android:entries="@array/prefsTimeSecondString"
            android:entryValues="@array/prefsTimeSeconds"
            android:key="@string/prefs_item_shutdowntime"
            android:title="@string/prefs_item_shutdowntime" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/prefs_item_towermaintenance"
            android:title="@string/prefs_item_towermaintenance"
            android:summary="@string/prefs_item_towermaintenance_explanation"/>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/prefs_item_notification"
            android:title="@string/prefs_item_notification"
            android:summary="@string/prefs_item_notification_explanation"/>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="start_boot"
            android:title="@string/prefs_item_boot"
            android:summary="@string/prefs_item_boot_explanation"/>

    </PreferenceCategory>

</PreferenceScreen>
