<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="300dp"
    android:padding="5dp">

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quicker_enable"
        android:id="@+id/quickSwitchEnable"
        android:layout_gravity="right"
        android:checked="false" />

    <View
        android:layout_width="100dp"
        android:layout_height="1px"
        android:background="@android:color/darker_gray"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/view"
        android:layout_gravity="center_horizontal" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quicker_wifi"
        android:id="@+id/quickSwitchWifi"
        android:layout_gravity="right"
        android:checked="false" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quicker_bt"
        android:id="@+id/quickSwitchBt"
        android:checked="false"
        android:layout_gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/quicker_explanation"
        android:id="@+id/textView2"
        android:layout_gravity="right"
        android:paddingRight="20dp"
        android:maxWidth="300dp"
        android:paddingTop="5dp" />

    <View
        android:layout_width="100dp"
        android:layout_height="1px"
        android:background="@android:color/darker_gray"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/view"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:paddingBottom="5dp"
        android:clickable="true"
        android:id="@+id/quickerManager"
        android:background="?android:attr/selectableItemBackground"
        android:layout_margin="1dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/ic_tab_swm"
            android:paddingRight="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/quicker_startswm"
            android:id="@+id/textView"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:id="@+id/quickerSettings"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        android:layout_margin="1dp"
        android:paddingBottom="5dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/ic_action_settings"
            android:paddingRight="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/quicker_settings"
            android:id="@+id/textView"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:id="@+id/quickerForget"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        android:layout_margin="1dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/ic_action_bad"
            android:paddingRight="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/quicker_forget"
            android:id="@+id/textView"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <View
        android:layout_width="100dp"
        android:layout_height="1px"
        android:background="@android:color/darker_gray"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/view"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quicker_close"
        android:id="@+id/quickerButtonClose"
        android:layout_gravity="center_horizontal"
        android:minWidth="200dp" />

</LinearLayout>
